fixes spacing titles in HS physics

--- a/rulesets/books/hs-physics/_config.scss
+++ b/rulesets/books/hs-physics/_config.scss
@@ -164,14 +164,14 @@ $bookCompositePages: (
 //unfortunately a base obj cannot be created for all Content because it would make the order of the keys static
 //when they need to be able to be in any order because of possible changes in titling order between books
 //Usage Note: key: class of the containing span, value: text that will go inside span
-$chapterTitleContent        : ( number : counter(chapter), );
+$chapterTitleContent        : ( number : counter(chapter), divider: ' ' );
 
-$appendixTitleContent       : ( title-label : "Appendix ", number : counter(appendix, upper-alpha), );
+$appendixTitleContent       : ( title-label : "Appendix ", number : counter(appendix, upper-alpha), divider: ' ' );
 
-$sectionTitleContent        : ( number : counter(chapter) "." counter(section), );
+$sectionTitleContent        : ( number : counter(chapter) "." counter(section), divider: ' ' );
 
 $exerciseTitleContent       : ( divider : ". ", number : counter(exercise) );
-$equationNumber             : ( number : counter(chapter) "." counter(equation) );
+$equationNumber             : ( number : counter(chapter) ". " counter(equation) );
 
 // FIXME: The fields in this list are generated in reverse order for some reason
 $exerciseContentTitleContent: ( number : counter(exerciseMaybeInContent), title-label : "Exercise" );
@@ -356,7 +356,7 @@ $setFigureCaption           : ( type: figure, defaultContainer: figcaption, hasC
 $targetLabels: (
   (
     selector    : '.os-eoc [data-type="exercise"]',
-    label       : "Exercise " counter(chapter) "." counter(exercise)
+    label       : "Exercise " counter(chapter) ". " counter(exercise)
   ),
   (
     selector    : 'div[data-type="chapter"] .example',
