--- a/rulesets/output/hs-physics.css
+++ b/rulesets/output/hs-physics.css
@@ -835,6 +835,11 @@
   content: counter(chapter);
   class: os-number;
   move-to: bChapterLabel; }
+:pass(2) div[data-type="chapter"]::before {
+  container: span;
+  content: " ";
+  class: os-divider;
+  move-to: bChapterLabel; }
 :pass(2) div[data-type="chapter"] > [data-type="document-title"] {
   container: h1;
   content: pending(bChapterLabel) content(); }
@@ -852,6 +857,11 @@
   content: counter(appendix,upper-alpha);
   class: os-number;
   move-to: bAppendixLabel; }
+:pass(2) div.appendix::before {
+  container: span;
+  content: " ";
+  class: os-divider;
+  move-to: bAppendixLabel; }
 :pass(2) div.appendix > [data-type="document-title"] {
   container: h1;
   content: pending(bAppendixLabel) content(); }
@@ -863,6 +873,11 @@
   container: span;
   content: counter(chapter) "." counter(section);
   class: os-number;
+  move-to: bSectionLabel; }
+:pass(2) div[data-type="chapter"] > div[data-type="page"]:not(.introduction)::before {
+  container: span;
+  content: " ";
+  class: os-divider;
   move-to: bSectionLabel; }
 :pass(2) div[data-type="chapter"] > div[data-type="page"]:not(.introduction) > [data-type="document-title"] {
   container: h2;
@@ -1181,7 +1196,7 @@
 :pass(6) div.appendix {
   counter-increment: appendix; }
 :pass(6) .os-eoc [data-type="exercise"] {
-  string-set: target-label "Exercise " counter(chapter) "." counter(exercise); }
+  string-set: target-label "Exercise " counter(chapter) ". " counter(exercise); }
 :pass(6) div[data-type="chapter"] .example {
   string-set: target-label "Example " counter(chapter) "." counter(example); }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered) {
@@ -1200,7 +1215,7 @@
   counter-increment: equation; }
 :pass(6) section:not(.summary) [data-type="equation"]:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(equation);
+  content: counter(chapter) ". " counter(equation);
   class: os-number; }
 :pass(6) body > [data-type="metadata"] {
   node-set: bookMetadata; }
